0.11.0
-------

 * Try to guess and preserve the file encoding (#638)
 * Restore cursor position better after deleteTrailingSpacesB (#666)
 * Fix eolPoint' when on last, empty line (#667, #662)
 * More intuitive justOneSep (emacs M-SPC) (#665)

0.10.0
------

 * Unicode syntax highlighting fixed (issue #82)
 * Hook to GTK Window exposed (#557)
 * Multiple components moved out to separate packages (oo-prototypes,
   word-trie, yi-languages, yi-string)
 * Replace a lot of the API to use YiString/Text instead of String
   improving performance
 * Greatly improve performance in the pango front-end as long as
   line-wrapping is on (default)
 * Recognise read-only files (#145)
 * Various Vim keymap improvements and fixes
 * Use lens instead of uniplate, replace some boilerplate with lens
 * Improve test framework to handle windows interactions, e.g. scrolling.
 * Use GHC.Generics instead of derive on GHC 7.8
 * Remove bitrotten ghcapi and scion flags.
 * Support non-qwerty vim users
 * Support eventlog profiling with -feventlog
 * Eliminate idle CPU consumption in vty frontend
 * General cleanup
 * Make C-w closer to actual emacs behaviour (#612)
 * Make M-h behave more like emacs (#611)
 * Hint with buffer names when using C-k with emacs keymap (#606)
 * Fix display of paths starting with / (#528)
 * Don't mark buffer as changed if nothing was killed (#618)
 * Nicer findFile &c behaviour in dired buffers (#149)
 * Implement C-a for CUA (#167)
 * Fix dired for directories with unicode files/dirs (#445)
 * Fix vim indenting under some circumstances (#621)
 * Allow the font size to be changed per buffer (#608)
 * Double-click and triple-click selection in pango (#100 and #101)
 * Count columns properly in presence of tabs (#440)
 * Extra marking operations in dired

 Contributors:
  Alan Zimmerman, Anders Papitto, Anthony Quizon, Ben Armston, Benno Fünfstück,
  Carter Charbonneau, Corey O'Connor, Cray Elliott, Dmitry Ivanov, fiendfan1,